--- a/zanata-war/src/main/webapp/WEB-INF/template/template.xhtml
+++ b/zanata-war/src/main/webapp/WEB-INF/template/template.xhtml
@@ -134,7 +134,7 @@
     <ui:include src="piwik.xhtml"/>
 
     <script type="text/javascript"
-      src="#{applicationConfiguration.webAssetsUrl}/assets/js/script.js"/>
+      src="#{applicationConfiguration.webAssetsUrl}/assets/js/script.min.js"/>
 
   </h:body>
   </html>
