--- a/zanata-war/src/main/webapp/WEB-INF/layout/version-group/languages-tab.xhtml
+++ b/zanata-war/src/main/webapp/WEB-INF/layout/version-group/languages-tab.xhtml
@@ -8,209 +8,204 @@
 
 <div class="panels--2">
 <div class="g--collapsed">
-<div class="g__item w--1-2 w--1-2-s panels__panel panel">
-  <div class="panels__panel__header panel__header">
-    <div class="bx--table">
-      <div class="bx--table__cell w--1 w--1-s">
-        <h2 class="heading--secondary epsilon">
-          <i class="i i--language"></i>
-          #{messages['jsf.Languages']}
-        </h2>
-      </div>
-      <div
-        class="txt--nowrap txt--align-right txt--s-align-right">
-        <zanata:sortlist id="languages-language_sorting"
-          sortAction="#{versionGroupHomeAction.sortLanguageList()}"
-          render="languages-language_form"
-          sortingList="#{versionGroupHomeAction.languageSortingList}"/>
-      </div>
-    </div>
-  </div>
-  <h:form id="languages-language_form" styleClass="l--push-bottom-0">
-    <s:fragment
-      rendered="#{versionGroupHomeAction.getActiveLocales().isEmpty()}">
-      <div class="l--pad-all-half">
-        <p class="txt--meta">#{messages['jsf.NoActiveLanguages']}</p>
-        <s:fragment
-          rendered="#{s:hasPermission(versionGroupHome.instance, 'update')}">
-          <p>
-            <a href="#settings-languages" class="button--primary"
-              onclick="updateHashAndGotoUrl(this)">
-              #{messages['jsf.AddLanguages']}
-            </a>
-          </p>
-        </s:fragment>
-      </div>
-    </s:fragment>
-
-    <s:fragment
-      rendered="#{!versionGroupHomeAction.getActiveLocales().isEmpty()}">
-      <ul class="list--stats" id="languages-language_list">
-        <ui:repeat
-          value="#{versionGroupHomeAction.getActiveLocales()}"
-          var="hLocale">
-          <li
-            class="progress-bar__expander panels__panel__item bg--highest--hover">
-            <a4j:commandLink
-              action="#{versionGroupHomeAction.setSelectedLocale(hLocale)}"
-              render="languages-project_list, language-label"
-              onclick="updateActiveRow(this);toggleColumn('languages_content')"
-              styleClass="bx--block">
-              <div class="list__item">
-                <div class="list__item__info">
-                      <span class="list__title">
-                        ${hLocale.retrieveDisplayName()}
-                        <a4j:outputPanel
-                          rendered="#{!versionGroupHomeAction.getMissingVersion(hLocale.localeId).isEmpty()}"
-                          styleClass="badge--danger"
-                          title="#{versionGroupHomeAction.getMissingVersionTitle(hLocale.localeId)}">
-                          #{versionGroupHomeAction.getMissingVersion(hLocale.localeId).size()}
-                        </a4j:outputPanel>
-                      </span>
-                </div>
-                <s:div styleClass="list__item__stats"
-                  rendered="#{versionGroupHomeAction.pageRendered}">
-                       <span class="stats--small txt--state-neutral">
-                          <span class="stats__figure">
-                            ${versionGroupHomeAction.getStatisticFigureForLocale(versionGroupHomeAction.languageSortingList.selectedSortOption, hLocale.localeId)}
-                          </span>
-                          <span class="stats__unit txt--lowercase">
-                            ${versionGroupHomeAction.getStatisticUnit(versionGroupHomeAction.languageSortingList.selectedSortOption)}
-                          </span>
-                        </span>
-                </s:div>
-              </div>
-
-              <zanata:statistic
-                value="${versionGroupHomeAction.getStatisticsForLocale(hLocale.localeId)}"
-                rendered="#{versionGroupHomeAction.pageRendered}"/>
-
-              <zanata:loader type="large"
-                rendered="#{!versionGroupHomeAction.pageRendered}"/>
-            </a4j:commandLink>
-          </li>
-        </ui:repeat>
-      </ul>
-    </s:fragment>
-  </h:form>
-</div>
-
-<div class="g__item w--1-2 w--1-2-s panels__panel panel bg--pop-higher">
-  <div class="panel__header">
-    <div class="bx--table">
-      <div class="is-hidden--l-up bx--table-cell txt--nowrap">
-        <a href="#" class="l--pad-all-half bx--inline-block"
-          onclick="removeActiveRows('languages-language_list');toggleColumn('languages_content')"
-          title="#{messages['Languages']}">
-          <i class="i--huge i--arrow-left"></i>
-        </a>
-      </div>
-
-      <div class="bx--table__cell w--1 w--1-s l--pad-all-half d--left">
-        <h2 class="heading--secondary epsilon">
-          <i class="i i--project l--push-right-quarter"></i>
-          <a4j:outputPanel id="language-label">
-            #{versionGroupHomeAction.selectedLocale.retrieveDisplayName()}
-          </a4j:outputPanel>
-          #{messages['Projects']}
-        </h2>
-      </div>
-      <div
-        class="txt--align-right txt--s-align-right txt--nowrap l--push-right-half">
-        <zanata:sortlist id="languages-project_sorting"
-          sortAction="#{versionGroupHomeAction.sortProjectList(versionGroupHomeAction.selectedLocale.localeId)}"
-          render="languages-project_list"
-          sortingList="#{versionGroupHomeAction.projectSortingList}"/>
+  <div class="g__item w--1-2 w--1-2-s panels__panel panel">
+    <div class="panels__panel__header panel__header">
+      <div class="bx--table">
+        <div class="bx--table__cell w--1 w--1-s">
+          <h2 class="heading--secondary epsilon">
+            <i class="i i--language"></i>
+            #{messages['jsf.Languages']}
+          </h2>
+        </div>
+        <div
+          class="txt--nowrap txt--align-right txt--s-align-right">
+          <zanata:sortlist id="languages-language_sorting"
+            sortAction="#{versionGroupHomeAction.sortLanguageList()}"
+            render="languages-language_form"
+            sortingList="#{versionGroupHomeAction.languageSortingList}"/>
+        </div>
       </div>
     </div>
-  </div>
-  <h:form id="languages-project_list" styleClass="l--push-bottom-0">
-    <s:fragment
-      rendered="#{versionGroupHomeAction.selectedLocale == null}">
-      <div class="l--pad-all-half">
-        <p class="txt--meta">
-          #{messages['jsf.SelectALanguageFromList']}
-        </p>
-      </div>
-    </s:fragment>
-    <s:fragment
-      rendered="#{versionGroupHomeAction.selectedLocale != null and versionGroupHomeAction.getProjectIterations().isEmpty()}">
-      <div class="l--pad-all-half">
-        <p class="txt--meta">#{messages['jsf.NoProjectsInGroup']}</p>
+    <h:form id="languages-language_form" styleClass="l--push-bottom-0">
+      <s:fragment
+        rendered="#{versionGroupHomeAction.getActiveLocales().isEmpty()}">
+        <div class="l--pad-all-half">
+          <p class="txt--meta">#{messages['jsf.NoActiveLanguages']}</p>
+          <s:fragment
+            rendered="#{s:hasPermission(versionGroupHome.instance, 'update')}">
+            <p>
+              <a href="#settings-languages" class="button--primary"
+                onclick="updateHashAndGotoUrl(this)">
+                #{messages['jsf.AddLanguages']}
+              </a>
+            </p>
+          </s:fragment>
+        </div>
+      </s:fragment>
 
-        <s:fragment
-          rendered="#{s:hasPermission(versionGroupHome.instance, 'update')}">
-          <p>
-            <a href="#settings-projects" class="button--primary"
-              onclick="updateHashAndGotoUrl(this)">
-              #{messages['jsf.AddProjectVersions']}
-            </a>
-          </p>
-        </s:fragment>
-      </div>
-    </s:fragment>
-    <s:fragment
-      rendered="#{versionGroupHomeAction.selectedLocale != null and !versionGroupHomeAction.getProjectIterations().isEmpty()}">
-      <ul class="list--stats">
-        <ui:repeat
-          value="#{versionGroupHomeAction.getProjectIterations()}"
-          var="version">
-          <li
-            class="progress-bar__expander panels__panel__item bg--highest--hover">
-            <div class="list__item">
-              <div class="list__item__info">
-                      <span class="list__title">
-                        <h:outputLink
-                          value="#{request.contextPath}/webtrans/Application.seam"
-                          rendered="#{versionGroupHomeAction.isLocaleActivatedInVersion(version, versionGroupHomeAction.selectedLocale.localeId)}">
-                          <f:param name="project"
-                            value="#{version.project.slug}"/>
-                          <f:param name="iteration"
-                            value="#{version.slug}"/>
-                          <f:param name="localeId"
-                            value="#{versionGroupHomeAction.selectedLocale.localeId}"/>
-                          <f:param name="locale"
-                            value="#{locale.language}"/>
-                          #{version.project.name} <i
-                          class="i i--version"></i> #{version.slug}
-                        </h:outputLink>
-
-                        <s:fragment
-                          rendered="#{!versionGroupHomeAction.isLocaleActivatedInVersion(version, versionGroupHomeAction.selectedLocale.localeId)}">
-                          #{version.project.name} <i
-                          class="i i--version"></i> #{version.slug}
-                        </s:fragment>
-
-                        <s:link view="/iteration/view.xhtml"
-                          rendered="#{!versionGroupHomeAction.isLocaleActivatedInVersion(version, versionGroupHomeAction.selectedLocale.localeId)}">
-                          <f:param name="projectSlug"
-                            value="#{version.project.slug}"/>
-                          <f:param name="iterationSlug"
-                            value="#{version.slug}"/>
-                          <span
-                            class="badge--danger">#{messages['jsf.Missing']}</span>
-                        </s:link>
-                      </span>
-              </div>
-              <div class="list__item__stats">
-                      <span class="stats--small">
+      <s:fragment
+        rendered="#{!versionGroupHomeAction.getActiveLocales().isEmpty()}">
+        <ul class="list--stats" id="languages-language_list">
+          <ui:repeat
+            value="#{versionGroupHomeAction.getActiveLocales()}" var="hLocale">
+            <li
+              class="progress-bar__expander panels__panel__item bg--highest--hover">
+              <a4j:commandLink
+                action="#{versionGroupHomeAction.setSelectedLocale(hLocale)}"
+                render="languages-project_list, language-label"
+                onclick="updateActiveRow(this);toggleColumn('languages_content')"
+                styleClass="bx--block">
+                <div class="list__item">
+                  <div class="list__item__info">
+                    <span class="list__title">
+                      ${hLocale.retrieveDisplayName()}
+                      <a4j:outputPanel
+                        rendered="#{!versionGroupHomeAction.getMissingVersion(hLocale.localeId).isEmpty()}"
+                        styleClass="badge--danger"
+                        title="#{versionGroupHomeAction.getMissingVersionTitle(hLocale.localeId)}">
+                        #{versionGroupHomeAction.getMissingVersion(hLocale.localeId).size()}
+                      </a4j:outputPanel>
+                    </span>
+                  </div>
+                  <s:div styleClass="list__item__stats"
+                    rendered="#{versionGroupHomeAction.pageRendered}">
+                     <span class="stats--small txt--state-neutral">
                         <span class="stats__figure">
-                          ${versionGroupHomeAction.getStatisticFigureForProjectWithLocale(versionGroupHomeAction.projectSortingList.selectedSortOption, versionGroupHomeAction.selectedLocale.localeId, version.id)}
+                          ${versionGroupHomeAction.getStatisticFigureForLocale(versionGroupHomeAction.languageSortingList.selectedSortOption, hLocale.localeId)}
                         </span>
                         <span class="stats__unit txt--lowercase">
-                          ${versionGroupHomeAction.getStatisticUnit(versionGroupHomeAction.projectSortingList.selectedSortOption)}
+                          ${versionGroupHomeAction.getStatisticUnit(versionGroupHomeAction.languageSortingList.selectedSortOption)}
                         </span>
-                      </span>
+                     </span>
+                  </s:div>
+                </div>
+
+                <zanata:statistic
+                  value="${versionGroupHomeAction.getStatisticsForLocale(hLocale.localeId)}"
+                  rendered="#{versionGroupHomeAction.pageRendered}"/>
+
+                <zanata:loader type="large"
+                  rendered="#{!versionGroupHomeAction.pageRendered}"/>
+              </a4j:commandLink>
+            </li>
+          </ui:repeat>
+        </ul>
+      </s:fragment>
+    </h:form>
+  </div>
+
+  <div class="g__item w--1-2 w--1-2-s panels__panel panel bg--pop-higher">
+    <div class="panel__header">
+      <div class="bx--table">
+        <div class="is-hidden--l-up bx--table-cell txt--nowrap">
+          <a href="#" class="l--pad-all-half bx--inline-block"
+            onclick="removeActiveRows('languages-language_list');toggleColumn('languages_content')"
+            title="#{messages['Languages']}">
+            <i class="i--huge i--arrow-left"></i>
+          </a>
+        </div>
+
+        <div class="bx--table__cell w--1 w--1-s l--pad-all-half d--left">
+          <h2 class="heading--secondary epsilon">
+            <i class="i i--project l--push-right-quarter"></i>
+            <a4j:outputPanel id="language-label">
+              #{versionGroupHomeAction.selectedLocale.retrieveDisplayName()}
+            </a4j:outputPanel>
+            #{messages['Projects']}
+          </h2>
+        </div>
+        <div
+          class="txt--align-right txt--s-align-right txt--nowrap l--push-right-half">
+          <zanata:sortlist id="languages-project_sorting"
+            sortAction="#{versionGroupHomeAction.sortProjectList(versionGroupHomeAction.selectedLocale.localeId)}"
+            render="languages-project_list"
+            sortingList="#{versionGroupHomeAction.projectSortingList}"/>
+        </div>
+      </div>
+    </div>
+    <h:form id="languages-project_list" styleClass="l--push-bottom-0">
+      <s:fragment
+        rendered="#{versionGroupHomeAction.selectedLocale == null}">
+        <div class="l--pad-all-half">
+          <p class="txt--meta">
+            #{messages['jsf.SelectALanguageFromList']}
+          </p>
+        </div>
+      </s:fragment>
+      <s:fragment
+        rendered="#{versionGroupHomeAction.selectedLocale != null and versionGroupHomeAction.getProjectIterations().isEmpty()}">
+        <div class="l--pad-all-half">
+          <p class="txt--meta">#{messages['jsf.NoProjectsInGroup']}</p>
+          <s:fragment
+            rendered="#{s:hasPermission(versionGroupHome.instance, 'update')}">
+            <p>
+              <a href="#settings-projects" class="button--primary"
+                onclick="updateHashAndGotoUrl(this)">
+                #{messages['jsf.AddProjectVersions']}
+              </a>
+            </p>
+          </s:fragment>
+        </div>
+      </s:fragment>
+      <s:fragment
+        rendered="#{versionGroupHomeAction.selectedLocale != null and !versionGroupHomeAction.getProjectIterations().isEmpty()}">
+        <ul class="list--stats">
+          <ui:repeat
+            value="#{versionGroupHomeAction.getProjectIterations()}"
+            var="version">
+            <li
+              class="progress-bar__expander panels__panel__item bg--highest--hover">
+              <div class="list__item">
+                <div class="list__item__info">
+                <span class="list__title">
+                  <h:outputLink
+                    value="#{request.contextPath}/webtrans/Application.seam"
+                    rendered="#{versionGroupHomeAction.isLocaleActivatedInVersion(version, versionGroupHomeAction.selectedLocale.localeId)}">
+                    <f:param name="project" value="#{version.project.slug}"/>
+                    <f:param name="iteration" value="#{version.slug}"/>
+                    <f:param name="localeId"
+                      value="#{versionGroupHomeAction.selectedLocale.localeId}"/>
+                    <f:param name="locale" value="#{locale.language}"/>
+                    #{version.project.name} <i
+                    class="i i--version"></i> #{version.slug}
+                  </h:outputLink>
+
+                  <s:fragment
+                    rendered="#{!versionGroupHomeAction.isLocaleActivatedInVersion(version, versionGroupHomeAction.selectedLocale.localeId)}">
+                    #{version.project.name} <i
+                    class="i i--version"></i> #{version.slug}
+                  </s:fragment>
+
+                  <s:link view="/iteration/view.xhtml"
+                    rendered="#{!versionGroupHomeAction.isLocaleActivatedInVersion(version, versionGroupHomeAction.selectedLocale.localeId)}">
+                    <f:param name="projectSlug"
+                      value="#{version.project.slug}"/>
+                    <f:param name="iterationSlug"
+                      value="#{version.slug}"/>
+                    <span
+                      class="badge--danger">#{messages['jsf.Missing']}</span>
+                  </s:link>
+                </span>
+                </div>
+                <div class="list__item__stats">
+                  <span class="stats--small">
+                    <span class="stats__figure">
+                      ${versionGroupHomeAction.getStatisticFigureForProjectWithLocale(versionGroupHomeAction.projectSortingList.selectedSortOption, versionGroupHomeAction.selectedLocale.localeId, version.id)}
+                    </span>
+                    <span class="stats__unit txt--lowercase">
+                      ${versionGroupHomeAction.getStatisticUnit(versionGroupHomeAction.projectSortingList.selectedSortOption)}
+                    </span>
+                  </span>
+                </div>
               </div>
-            </div>
-            <zanata:statistic
-              value="${versionGroupHomeAction.getSelectedLocaleStatistic(version.id)}"/>
-          </li>
-        </ui:repeat>
-      </ul>
-    </s:fragment>
-  </h:form>
-</div>
+              <zanata:statistic
+                value="${versionGroupHomeAction.getSelectedLocaleStatistic(version.id)}"/>
+            </li>
+          </ui:repeat>
+        </ul>
+      </s:fragment>
+    </h:form>
+  </div>
 </div>
 </div>
 </ui:composition>
